--- a/Cue/app/src/main/res/values/strings.xml
+++ b/Cue/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Cue</string>
     <string name="action_settings">Settings</string>
+    <string name="facebook_app_id">1562358014080590</string>
 </resources>
