--- a/Cue/app/src/main/res/values/strings.xml
+++ b/Cue/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Cue</string>
     <string name="action_settings">Settings</string>
     <string name="facebook_app_id">1562358014080590</string>
+    <string name="title_activity_create_notification">CreateNotificationActivity</string>
 </resources>
